@@ -2,6 +2,7 @@ class CampaignsController < ApplicationController
   before_filter :require_user
   before_filter :get_data_for_sidebar, :only => :index
   before_filter :set_current_tab, :only => [ :index, :show ]
+  before_filter :auto_complete, :only => :auto_complete
   after_filter  :update_recently_viewed, :only => :show
 
   # GET /campaigns
@@ -135,14 +136,9 @@ class CampaignsController < ApplicationController
     end
   end
 
-  # POST /leads/auto_complete/query                                        AJAX
+  # POST /campaigns/auto_complete/query                                    AJAX
   #----------------------------------------------------------------------------
-  def auto_complete
-    @query = params[:auto_complete_query]
-    @auto_complete = Campaign.my(@current_user).search(@query).limit(10)
-    session[:auto_complete] = :campaigns
-    render :template => "common/auto_complete", :layout => nil
-  end
+  # Handled by before_filter :auto_complete, :only => :auto_complete
 
   # Ajax request to filter out list of campaigns.                          AJAX
   #----------------------------------------------------------------------------
