@@ -2,6 +2,7 @@ class LeadsController < ApplicationController
   before_filter :require_user
   before_filter :get_data_for_sidebar, :only => :index
   before_filter :set_current_tab, :only => [ :index, :show ]
+  before_filter :auto_complete, :only => :auto_complete
   after_filter  :update_recently_viewed, :only => :show
 
   # GET /leads
@@ -206,12 +207,7 @@ class LeadsController < ApplicationController
 
   # POST /leads/auto_complete/query                                        AJAX
   #----------------------------------------------------------------------------
-  def auto_complete
-    @query = params[:auto_complete_query]
-    @auto_complete = Lead.my(@current_user).search(@query).limit(10)
-    session[:auto_complete] = :leads
-    render :template => "common/auto_complete", :layout => nil
-  end
+  # Handled by before_filter :auto_complete, :only => :auto_complete
 
   # Ajax request to filter out list of leads.                              AJAX
   #----------------------------------------------------------------------------
