@@ -1,5 +1,7 @@
-- unless @auto_complete.blank?
-  %ul
+%ul
+  - unless @auto_complete.blank?
     - @auto_complete.each do |item|
       - name = item.name << (item.is_a?(Lead) ? " (#{item.company})" : "")
-      %li{ :id => item.to_param }= highlight name.shorten(45), params[:auto_complete_query]
+      %li{ :id => item.to_param }= highlight name.shorten(45), @query
+  - else
+    %li== No #{controller.controller_name} match <font color="yellow">#{@query}</font>
